--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.flyway.locations=classpath:db/migration
 #JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration-ms=${JWT_EXPIRATION_MS}
+
+# Hugging Face API
+huggingface.api.token=${HUGGINGFACE_API_TOKEN}
