--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,7 +2,7 @@
 spring.application.name=proksi
 
 # Server Configuration
-server.port=${SERVER_PORT:8080}
+server.port=${PORT:8080}
 server.error.include-message=never
 server.error.include-binding-errors=never
 server.error.include-stacktrace=never
