debug: Add environment variable debugging for Railway deployment

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -8,9 +8,9 @@ server.error.include-binding-errors=always
 server.error.include-stacktrace=on_param
 
 # Database Configuration (Railway PostgreSQL)
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=${DATABASE_URL:NOT_SET}
+spring.datasource.username=${PGUSER:NOT_SET}
+spring.datasource.password=${PGPASSWORD:NOT_SET}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection Pool Configuration
@@ -43,6 +43,9 @@ logging.level.com.poxju.proksi=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # Actuator Configuration (More endpoints for development)
