fix: Use individual PostgreSQL environment variables instead of DATABASE_URL template

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -8,9 +8,9 @@ server.error.include-binding-errors=always
 server.error.include-stacktrace=on_param
 
 # Database Configuration (Railway PostgreSQL)
-spring.datasource.url=${DATABASE_URL:NOT_SET}
-spring.datasource.username=${PGUSER:NOT_SET}
-spring.datasource.password=${PGPASSWORD:NOT_SET}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:railway}}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection Pool Configuration
