--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -8,7 +8,7 @@ server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 
 # Database Configuration
-spring.datasource.url=${DATABASE_URL:${DB_URL:jdbc:postgresql://localhost:5432/pdb}}
+# spring.datasource.url=${DATABASE_URL:${DB_URL:jdbc:postgresql://localhost:5432/pdb}}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
