fix: Update database configuration to use explicit Railway-style environment variables

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -8,9 +8,11 @@ server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 
 # Database Configuration
-# spring.datasource.url=${DATABASE_URL:${DB_URL:jdbc:postgresql://localhost:5432/pdb}}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:postgres}
+# Explicit Railway-style env variables (set these in Railway Variables):
+#   DB_HOST, DB_PORT, DB_NAME, DB_USER, DB_PASSWORD
+spring.datasource.url=jdbc:postgresql://${DB_HOST:${PGHOST:localhost}}:${DB_PORT:${PGPORT:5432}}/${DB_NAME:${PGDATABASE:pdb}}
+spring.datasource.username=${DB_USER:${PGUSER:postgres}}
+spring.datasource.password=${DB_PASSWORD:${PGPASSWORD:postgres}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Connection Pool Configuration
