performance related minor updates

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -13,11 +13,13 @@ spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=5
+# Connection Pool Configuration (Optimized for 512MB RAM)
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.leak-detection-threshold=60000
 
 # JPA & Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=validate
@@ -25,6 +27,10 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.batch_size=10
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
 # Flyway Configuration
 spring.flyway.enabled=true
@@ -38,21 +44,40 @@ jwt.expiration-ms=${JWT_EXPIRATION_MS}
 # HuggingFace API Configuration
 huggingface.api.token=${HUGGINGFACE_API_TOKEN}
 
+# Thymeleaf Configuration (Enable caching in production)
+spring.thymeleaf.cache=true
+spring.thymeleaf.mode=HTML
+
 # Logging Configuration
 logging.level.com.poxju.proksi=INFO
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=WARN
+logging.level.org.springframework.security=WARN
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 # Actuator Configuration (for health checks)
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=never
 management.health.diskspace.enabled=false
+management.health.db.enabled=true
+management.health.defaults.enabled=true
+
+# Optimize for fast startup and wake-up
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# Compression Configuration
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+server.compression.min-response-size=1024
 
 # Security Configuration
 server.error.whitelabel.enabled=false
 
-# Async Configuration
-spring.task.execution.pool.core-size=5
-spring.task.execution.pool.max-size=20
-spring.task.execution.pool.queue-capacity=100
+# Async Configuration (Optimized for 1 vCPU)
+spring.task.execution.pool.core-size=2
+spring.task.execution.pool.max-size=4
+spring.task.execution.pool.queue-capacity=10
+spring.task.execution.thread-name-prefix=async-
+spring.task.execution.shutdown.await-termination=true
+spring.task.execution.shutdown.await-termination-period=30s
