--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ jwt.expiration-ms=${JWT_EXPIRATION_MS}
 
 # Hugging Face API
 huggingface.api.token=${HUGGINGFACE_API_TOKEN}
+
+# Actuator Configuration (for health checks)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+management.health.diskspace.enabled=false
